--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+futures = "0.3.21"
 hyper = { version = "0.14", features = ["http1", "tcp", "server"] }
 tokio = { version = "1", features = ["full"] }
+tokio-util = "0.7"
