--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,4 @@ futures = "0.3.21"
 hyper = { version = "0.14", features = ["http1", "tcp", "server"] }
 tokio = { version = "1", features = ["full"] }
 tokio-util = "0.7"
-tower = { version = "0.4.12", features = ["limit"] }
+tower = { version = "0.4.12", features = ["limit", "util"] }
