--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+color-eyre = "0.6.1"
 futures = "0.3.21"
 hyper = { version = "0.14", features = ["http1", "tcp", "server"] }
 socket2 = "0.4.4"
